# autonomous-startup

./: .env.example  .gitignore  AGENTS.md  CREWAI_COMPLETE.md  CREWAI_MIGRATION.md  CUSTOMER_SIMULATION.md  EXPERIMENT.md  FINAL_SUMMARY.md  FRAMEWORK_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  LAYER_C_AGENT_RUNTIME.md  Outline  PRODUCT_VISION.md  PROGRESS.md  QUICKSTART.md  README.md  collaboration_framework.xlsx  loc_per_iteration.csv  loc_per_iteration.xlsx  next_steps.md  plan.md  pyproject.toml  requirements.txt  run_analysis.csv  run_analysis.xlsx  tool_distribution.xlsx  tool_distribution_top5.xlsx  wiring_gaps.md
.claude/: settings.local.json
docs/: CUSTOMER_SIMULATION.md  DONE.md  PRODUCT_VISION.md  next_steps.md
scripts/: _bootstrap.py  clean.py  demo_scenarios.py  evaluate_customer_simulation.py  final_verification.py  gen_collab_excel.py  live_dashboard.py  run.py  run_customer_simulation.py  run_framework_simulation.py  run_scheduler.py  run_simulation.py  run_web_autonomy.py  seed_memory.py  serve_workspace.py  test_crewai_quick.py  verify_installation.py
src/: __init__.py
tests/: __init__.py  test_agent_runtime.py  test_autonomy_adaptive_policy.py  test_autonomy_controller.py  test_autonomy_diagnostics.py  test_autonomy_scheduler.py  test_capability_registry.py  test_contracts.py  test_coordination.py  test_coordinator_delegation.py  test_crewai_dynamic_autonomy.py  test_crewai_integration.py  test_crewai_runtime_env.py  test_customer_agent_vc.py  test_customer_environment.py  test_customer_event_instrumentation.py  test_customer_explanation_quality.py  (+38 more)
(+189 files in other folders)
