[tool.poetry]
name = "autonomous-startup"
version = "0.1.0"
description = "Autonomous Startup Multi-Agent System Prototype"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
langgraph = "^0.0.26"
anthropic = "^0.18.0"
openai = "^1.12.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
