[tool.poetry]
name = "autonomous-startup"
version = "0.1.0"
description = "Autonomous Startup Multi-Agent System Prototype"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crewai = "1.9.3"
crewai-tools = "1.9.3"
anthropic = "0.75.0"
openai = "1.83.0"
pydantic = "2.11.10"
python-dotenv = "1.1.1"
pydantic-settings = "2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
black = "24.0.0"
ruff = "0.2.0"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require a live LLM API key (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
